--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
         
         <!-- JS Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         {% block stylesheets %}
         {% endblock %}
 
@@ -27,13 +28,26 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{{ url('index') }}">Home</a>
                         </li>
+                        {% if app.user %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Área do Usuário</a>
+                            <a class="nav-link" href="{{ url('app_usuario') }}">Área do Usuário</a>
                         </li>
+                        {% endif %}
                         
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <form id="form_busca" class="d-flex">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            {% if app.user %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url('app_logout') }}">Logout</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url('app_login') }}">Login</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                        <input class="form-control me-2" id="text_busca" type="search" placeholder="Buscar" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                 </div>
